# horizon-dbg

./: Cargo.toml  flake.nix  todo.md
horizon-dbg/: Cargo.toml
horizon-dbg-cpp/: Cargo.toml
horizon-dbg-cpp/src/: lib.rs  protocol.hpp
horizon-dbg-protocol/: Cargo.toml
horizon-dbg-protocol/src/: breakpoints.rs  frame.rs  lib.rs  result.rs  subscription.rs  watch_region.rs
horizon-dbg/src/: main.rs  persistent.rs
horizon-dbg/src/engine/: connection.rs  memory.rs  mod.rs  types.rs
horizon-dbg/src/engine/connection/: mod.rs  tcp_transport.rs
horizon-dbg/src/ui/: connect.rs  hexeditor.rs  mod.rs
