[package]
name = "horizon-dbg-protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
postcard = "1.1.3"
postcard-rpc = "0.11.13"
postcard-schema = { version = "0.2.4", features = ["alloc"] }
serde = { version = "1.0.219", features = ["derive"], default-features = false }
zerocopy = { version = "0.8.26", features = ["derive"] }
