[package]
name = "horizon-dbg"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.32.1", features = ["persistence"] }
egui = "0.32.1"
egui_dock = "0.17.0"
gimli = "0.32.1"
nodit = "0.9.2"
postcard-rpc = { version = "0.11.13", features = ["use-std"] }
thunderdome = "0.6.1"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "net", "sync"] }
xtra = { version = "0.6.0", features = ["tokio"] }
